--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@types/cesium": "^1.70.0",
     "axios": "^0.27.2",
     "cesium": "^1.96.0",
