--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.54.3",
+    "tailwindcss": "^3.4.1",
     "unplugin-auto-import": "^0.11.1",
     "unplugin-vue-components": "^0.22.0",
     "vite": "^3.0.0",
