--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "GpxEditor",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
