--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "preview": "vite preview",
     "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
     "prettier": "prettier --write src/**/*.{js,jsx,vue,ts,tsx}",
-    "prepare": "husky install",
-    "postinstall": "npm list -g bun || npm install -g bun",
-    "preinstall": "echo 'Please use \"bun install\" instead of \"npm install\", \"pnpm install\" or \"yarn install\"' && exit 1"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
@@ -34,7 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.1",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.54.3",
     "tailwindcss": "^3.4.1",
